5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1811_2567.log
== TEST (2019-06-08 22:42:23) 
-- CODE:
s=int(input("digie a base: "))

for i in s:
	a= i * "*"
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in s:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:42:46) 
-- CODE:
s=int(input("digie a base: "))

for i in range(s):
	a= i * "*"
print(a)
-- OUTPUT:
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:43:17) 
-- CODE:
s=int(input("digie a base: "))

for i in range(0,s):
	a= i * "*"
print(a)
-- OUTPUT:
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:43:51) 
-- CODE:
s=int(input("digie a base: "))

for i in range(0,s+1):
	a= i * "*"
print(a)
-- OUTPUT:
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:44:28) 
-- CODE:
s=int(input("digie a base: "))

for i in range(0,s+1):
	a= i * "*"
	print(a)
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:45:59) 
-- CODE:
s=int(input("digie a base: "))

for i in range(0,s+1):
	a= i * "*"
	print(a)
for i in range(s+1,0):
	a= i * "*"
	print(a)
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:47:07) 
-- CODE:
s=int(input("digie a base: "))

for i in range(0,s+1) and for i in range(s+1,0):
	a= i * "*"
	print(a)

-- ERROR:
File "XXXX", line 3
    for i in range(0,s+1) and for i in range(s+1,0):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:47:48) 
-- CODE:
s=int(input("digie a base: "))



for i in range(0,s+1):
	a= i * "*"
	print(a)

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:48:05) 
-- CODE:
s=int(input("digie a base: "))



for i in range(s+1,0):
	a= i * "*"
	print(a)

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:48:23) 
-- CODE:
s=int(input("digie a base: "))



for i in range(-1,0):
	a= i * "*"
	print(a)

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:48:55) 
-- CODE:
s=int(input("digie a base: "))



for i in range(0,s+1):
	a= i * "*"
	print(a)

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 22:49:05) 
-- CODE:
s=int(input("digie a base: "))



for i in range(0,s+1):
	a= i * "*"
	print(a)

-- EXECUTION TIME:
0.872711
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:49:27) 
-- CODE:
s=int(input("digie a base: "))



for i in range(::-1):
	a= i * "*"
	print(a)

-- ERROR:
File "XXXX", line 5
    for i in range(::-1):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 23:01:48) 
-- CODE:
s=int(input("digie a base: "))



for i in range(0,s+1):
	a= i * "*"
	print(a)

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 23:05:35) 
-- CODE:
s=int(input("digie a base: "))
for i in range(a):
	a= (i-a)* "*"
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(a):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 23:07:26) 
-- CODE:
s=int(input("digie a base: "))
for i in range(a):
	a="*"*(a-i)
	print(a)
for i in range(0,s+1):
	a= i * "*"
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(a):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 23:07:48) 
-- CODE:
s=int(input("digie a base: "))
for i in range(0, s+1):
	a="*"*(a-i)
	print(a)
for i in range(0,s+1):
	a= i * "*"
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a="*"*(a-i)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 23:09:51) 
-- CODE:
s=int(input("digie a base: "))
for i in range(0, s+1):
	a="*"*(s-i)
	print(a)
for i in range(0,s+1):
	a= i * "*"
	print(a)

-- OUTPUT:
********
*******
******
*****
****
***
**
*


*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 23:11:19) 
-- CODE:
s=int(input("digie a base: "))
for i in range(0, s+1):
	a="*"*(s-i)
	print(a)
for i in range(0,s+1):
	a= i * "*"
	print(a)

-- EXECUTION TIME:
0.794764
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*


*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*


*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*


*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 23:11:35) 
-- CODE:
s=int(input("digie a base: "))
for i in range(0, s+1):
	a="*"*(s-i)
	print(a)
for i in range(0,s+1):
	a= i * "*"
	print(a)

-- OUTPUT:
********
*******
******
*****
****
***
**
*


*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
